# gtkmail

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  RELNOTES  configure.ac  gtkmail.spec  mkinstalldirs
src/: AddressBook.cc  AddressBook.hh  AddressBookPreflet.cc  AddressBookPreflet.hh  Config.cc  Config.hh  Dialog.cc  Dialog.hh  HtmlWin.cc  HtmlWin.hh  MailBox.cc  MailBox.hh  MailBoxDruid.cc  MailBoxDruid.hh  MailBoxPreflet.cc  MailBoxPreflet.hh  MailView.cc  MailView.hh  MainWin.cc  MainWin.hh  Makefile.am  MessageWin.cc  MessageWin.hh  Pixbuf.cc  Pixbuf.hh  PopupWin.cc  PopupWin.hh  Preflet.cc  Preflet.hh  Prefs.cc  Prefs.hh  ProtocolHandlerMap.cc  ProtocolHandlerMap.hh  ProtocolHandlerPreflet.cc  ProtocolHandlerPreflet.hh  ReadWin.cc  ReadWin.hh  SignalChain.hh  SignalQueue.cc  SignalQueue.hh  (+15 more)
src/xpm/: Makefile.am  addressbook.xpm  application.xpm  audio.xpm  cancel.xpm  dir-close.xpm  dir-open.xpm  general.xpm  image.xpm  mail-delete.xpm  mail-reply-all.xpm  mail-save.xpm  mail-view.xpm  mail.xpm  mailbox.xpm  multipart.xpm  text.xpm  ui.xpm
