SUBDIRS = xpm

bin_PROGRAMS = gtkmail
gtkmail_SOURCES = MessageWin.cc Dialog.cc ReadWin.cc MainWin.cc WriteWin.cc \
                  TextWin.cc HtmlWin.cc MailBox.cc Config.cc main.cc MessageWin.hh    \
                  Dialog.hh ReadWin.hh MainWin.hh WriteWin.hh TextWin.hh    \
                  HtmlWin.hh MailBox.hh SignalChain.hh Config.hh  \
                  MailView.hh MailView.cc Preflet.hh Preflet.cc Prefs.hh Prefs.cc \
                  UIPreflet.hh UIPreflet.cc MailBoxPreflet.hh MailBoxPreflet.cc \
                  AddressBook.hh AddressBook.cc AddressBookPreflet.hh AddressBookPreflet.cc


