EXTRA_DIST = application.xpm mail-compose.xpm mail-reply.xpm multipart.xpm \
             audio.xpm       mail-delete.xpm  mail-save.xpm  text.xpm \
             dir-close.xpm   mail-forward.xpm mail-send.xpm          \
             dir-open.xpm    mail-receive.xpm mail-view.xpm  \
             mail-reply-all.xpm image.xpm mail.xpm save.xpm cancel.xpm \
             mail-new.xpm mail-read.xpm mail-replied.xpm addressbook.xpm general.xpm \
             mailbox.xpm ui.xpm attachment.xpm empty.xpm

